Fixed spacing on header and about page, Acknoweldgements title still needs some styling, and mobile styles need to be polished

--- a/_sass/includes/acknowledgements.scss
+++ b/_sass/includes/acknowledgements.scss
@@ -4,7 +4,7 @@ div.acknowledgements{
     border-radius: 0px 0px 111.455px 111.455px;
     box-shadow: 0px 4.4582px 22.291px rgba(0, 0, 0, 0.15);
     overflow:hidden;
-    div.acknowledgements_title>h1, div.origins, div.mentions, div.view_projects{
+ div.origins, div.mentions, div.view_projects{
         padding-left: 116px;
         padding-right: 116px;
         color: $white;
@@ -34,10 +34,7 @@ div.acknowledgements{
         flex-direction: row-reverse;
         position: relative;
         h1{
-            width: 611px;
-            height: 84px;
-            left: calc(50% - 611px/2 + 284.5px);
-            top: 1656px;
+         color: $white;
         }
       img{
         position: absolute;
